syntax = "proto3";
package email_client;

message AttachmentHeader {
    string id = 1;
    string mime_type = 2;
    string name = 3;
    string content_id = 4;
}

message LoadAttachmentRequest {
    string id = 1;
}

message LoadAttachmentResponse {
    string id = 1;
    map<string, string> headers = 2;
    string mime_type = 3;
    string name = 4;
    string content_id = 5;
    bytes contents = 6;
}
